# task-board

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/: app.js
src/: assets.rs  main.rs  opts.rs  run_opts.rs  test.rs  tw.rs
templates/: layout.html.tera
