[package]
name = "task-board"
version = "0.1.0"
authors = ["desbma <desbma@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
anyhow = "1.0"
httpdate = "0.3"
reqwest = { version = "0.10", default-features = false, features = ["default-tls", "blocking", "gzip"] }

[dependencies]
anyhow = "1.0"
httpdate = "0.3"
lazy_static = "1.4"
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["tera_templates"] }
rust-embed = "5.5"
serde = { version = "1.0", features = ["derive"] }
#tera = { version = "1", default-features = false }
