[package]
name = "task-board"
version = "0.1.0"
authors = ["desbma <desbma@users.noreply.github.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
anyhow = "1.0"
httpdate = "0.3"
reqwest = { version = "0.10", default-features = false, features = ["default-tls", "blocking", "gzip"] }

[dev-dependencies]
rstest = "0.6"

[dependencies]
anyhow = "1.0"
httpdate = "0.3"
lazy_static = "1.4"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["json", "tera_templates"] }
rust-embed = "5.5"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.0"
simple_logger = { version = "1.3", default-features = false }
structopt = "0.3"
strum = "0.19"
strum_macros = "0.19"
tempfile = "3"
